--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.10.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
