--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.10.2",
+    "@clerk/nextjs": "^6.10.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
@@ -21,6 +21,8 @@
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^17.6.0",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
